k8s/projects/3-TravelMemory/mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: database
spec:
  selector:
    app: mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
