k8s/projects/3-TravelMemory/service-alias.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-alias
  namespace: frontend
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
